// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders Radio Group correctly 1`] = `
<div
  class="zw-radio-group zw-radio-group--md zw-radio-group--radius zw-radio-group--compact zw-radio-group--ghost"
>
  <div
    class="zw-radio-group__inner"
  >
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        A
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="a"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        B
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="b"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        C
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="c"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        D
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="d"
      />
    </span>
  </div>
</div>
`;

exports[`Radio renders checked Radio Group correctly 1`] = `
<div
  class="zw-radio-group zw-radio-group--md zw-radio-group--radius zw-radio-group--compact zw-radio-group--ghost"
>
  <div
    class="zw-radio-group__inner"
  >
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        A
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="a"
      />
    </span>
    <span
      class="zw-radio zw-radio--checked"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        B
      </span>
      <input
        checked=""
        class="zw-radio__input"
        type="radio"
        value="b"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        C
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="c"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        D
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="d"
      />
    </span>
  </div>
</div>
`;

exports[`Radio renders checked Radio correctly 1`] = `
<span
  class="zw-radio zw-radio--checked"
>
  <span
    class="zw-radio__widget"
  >
    <span
      class="zw-radio__inner"
    />
  </span>
  <span
    class="zw-radio__text"
  >
    选择
  </span>
  <input
    checked=""
    class="zw-radio__input"
    type="radio"
  />
</span>
`;

exports[`Radio renders defaultValue Radio Group correctly 1`] = `
<div
  class="zw-radio-group zw-radio-group--md zw-radio-group--radius zw-radio-group--compact zw-radio-group--ghost"
>
  <div
    class="zw-radio-group__inner"
  >
    <span
      class="zw-radio zw-radio--checked"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        A
      </span>
      <input
        checked=""
        class="zw-radio__input"
        type="radio"
        value="a"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        B
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="b"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        C
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="c"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        D
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="d"
      />
    </span>
  </div>
</div>
`;

exports[`Radio renders disabled Radio correctly 1`] = `
<span
  class="zw-radio zw-radio--disabled"
>
  <span
    class="zw-radio__widget"
  >
    <span
      class="zw-radio__inner"
    />
  </span>
  <span
    class="zw-radio__text"
  >
    选择
  </span>
  <input
    class="zw-radio__input"
    disabled=""
    type="radio"
    value="a"
  />
</span>
`;

exports[`Radio renders normal Radio correctly 1`] = `
<span
  class="zw-radio"
>
  <span
    class="zw-radio__widget"
  >
    <span
      class="zw-radio__inner"
    />
  </span>
  <span
    class="zw-radio__text"
  >
    选择
  </span>
  <input
    class="zw-radio__input"
    type="radio"
    value="a"
  />
</span>
`;

exports[`Radio renders value Radio Group correctly 1`] = `
<div
  class="zw-radio-group zw-radio-group--md zw-radio-group--radius zw-radio-group--compact zw-radio-group--ghost"
>
  <div
    class="zw-radio-group__inner"
  >
    <span
      class="zw-radio zw-radio--checked"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        A
      </span>
      <input
        checked=""
        class="zw-radio__input"
        type="radio"
        value="a"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        B
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="b"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        C
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="c"
      />
    </span>
    <span
      class="zw-radio"
    >
      <span
        class="zw-radio__widget"
      >
        <span
          class="zw-radio__inner"
        />
      </span>
      <span
        class="zw-radio__text"
      >
        D
      </span>
      <input
        class="zw-radio__input"
        type="radio"
        value="d"
      />
    </span>
  </div>
</div>
`;
